common/oauth2-proxy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    pod-security.kubernetes.io/enforce: restricted
