common/oauth2-proxy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
    spec:
      serviceAccountName: oauth2-proxy
      volumes:
      - name: oauth2-proxy-config
        configMap:
          name: oauth2-proxy
      - name: oauth2-proxy-theme
        configMap:
          name: oauth2-proxy-theme
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.4
        args:
        - --http-address=0.0.0.0:4180
        - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
        ports:
        - name: http
          containerPort: 4180
          protocol: TCP
        - name: metrics
          containerPort: 44180
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: oauth2-proxy-config
          mountPath: /etc/oauth2_proxy/oauth2_proxy.cfg
          subPath: oauth2_proxy.cfg
          readOnly: true
        - name: oauth2-proxy-theme
          mountPath: /custom-theme/kubeflow-logo.svg
          subPath: kubeflow-logo.svg
          readOnly: true
        livenessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /ready
            port: http
            scheme: HTTP
        resources: {}
