common/oauth2-proxy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oauth2-proxy
  ports:
    - port: 80
      name: http
      targetPort: http
  publishNotReadyAddresses: true
