common/oauth2-proxy/base/virtualservice.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
spec:
  parentRefs:
  - name: kubeflow-gateway
    namespace: kubeflow
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /oauth2/
    backendRefs:
    - name: oauth2-proxy
      port: 80
